feat(config): update vscode error lens msg format

--- a/Code/User/partials/settings/core/extensions.json
+++ b/Code/User/partials/settings/core/extensions.json
@@ -2,7 +2,43 @@
 	"$schema": "vscode://schemas/settings/default",
 	"extensions.experimental.deferredStartupFinishedActivation": true,
 	"extensions.experimental.affinity": {
-		"asvetliakov.vscode-neovim": 1
+		"asvetliakov.vscode-neovim": 1,
+		"vspacecode.whichkey": 2,
+		"alefragnani.bookmarks": 3,
+		"be5invis.vscode-custom-css": 3,
+		"biomejs.biome": 3,
+		"bmewburn.vscode-intelephense-client": 3,
+		"brandonkirbyson.vscode-animations": 3,
+		"christian-kohler.path-intellisense": 3,
+		"compulim.vscode-clock": 3,
+		"cweijan.dbclient-jdbc": 3,
+		"cweijan.vscode-database-client2": 3,
+		"cyansprite.smoothscroll": 3,
+		"eamodio.gitlens": 3,
+		"github.copilot": 3,
+		"github.copilot-chat": 3,
+		"github.vscode-github-actions": 3,
+		"github.vscode-pull-request-github": 3,
+		"golang.go": 3,
+		"graphql.vscode-graphql": 3,
+		"graphql.vscode-graphql-execution": 3,
+		"graphql.vscode-graphql-syntax": 3,
+		"humao.rest-client": 3,
+		"mikestead.dotenv": 3,
+		"ms-python.python": 3,
+		"ms-python.vscode-pylance": 3,
+		"ms-python.vscode-python-envs": 3,
+		"ms-vscode-remote.remote-containers": 3,
+		"naumovs.color-highlight": 3,
+		"oderwat.indent-rainbow": 3,
+		"prisma.prisma": 3,
+		"redhat.java": 3,
+		"rexshi.phpdoc-comment-vscode-plugin": 3,
+		"streetsidesoftware.avro": 3,
+		"streetsidesoftware.code-spell-checker": 3,
+		"sumneko.lua": 3,
+		"usernamehw.errorlens": 3,
+		"yoavbls.pretty-ts-errors": 3
 	},
 	"extensions.ignoreRecommendations": true,
 	"extensions.autoCheckUpdates": true,
