--- a/Code/User/settings.json
+++ b/Code/User/settings.json
@@ -12,7 +12,7 @@
 	"editor.renderWhitespace": "trailing",
 	"editor.renderLineHighlight": "line",
 	"editor.lineHeight": 1.2,
-	"editor.codeActionsOnSave": { },
+	"editor.codeActionsOnSave": {},
 	"editor.fontFamily": "FiraCode Nerd Font",
 	"editor.fontLigatures": true,
 	"editor.insertSpaces": false,
@@ -65,7 +65,43 @@
 	"files.confirmDelete": false,
 	"extensions.experimental.deferredStartupFinishedActivation": true,
 	"extensions.experimental.affinity": {
-		"asvetliakov.vscode-neovim": 1
+		"asvetliakov.vscode-neovim": 1,
+		"vspacecode.whichkey": 2,
+		"alefragnani.bookmarks": 3,
+		"be5invis.vscode-custom-css": 3,
+		"biomejs.biome": 3,
+		"bmewburn.vscode-intelephense-client": 3,
+		"brandonkirbyson.vscode-animations": 3,
+		"christian-kohler.path-intellisense": 3,
+		"compulim.vscode-clock": 3,
+		"cweijan.dbclient-jdbc": 3,
+		"cweijan.vscode-database-client2": 3,
+		"cyansprite.smoothscroll": 3,
+		"eamodio.gitlens": 3,
+		"github.copilot": 3,
+		"github.copilot-chat": 3,
+		"github.vscode-github-actions": 3,
+		"github.vscode-pull-request-github": 3,
+		"golang.go": 3,
+		"graphql.vscode-graphql": 3,
+		"graphql.vscode-graphql-execution": 3,
+		"graphql.vscode-graphql-syntax": 3,
+		"humao.rest-client": 3,
+		"mikestead.dotenv": 3,
+		"ms-python.python": 3,
+		"ms-python.vscode-pylance": 3,
+		"ms-python.vscode-python-envs": 3,
+		"ms-vscode-remote.remote-containers": 3,
+		"naumovs.color-highlight": 3,
+		"oderwat.indent-rainbow": 3,
+		"prisma.prisma": 3,
+		"redhat.java": 3,
+		"rexshi.phpdoc-comment-vscode-plugin": 3,
+		"streetsidesoftware.avro": 3,
+		"streetsidesoftware.code-spell-checker": 3,
+		"sumneko.lua": 3,
+		"usernamehw.errorlens": 3,
+		"yoavbls.pretty-ts-errors": 3
 	},
 	"extensions.ignoreRecommendations": true,
 	"extensions.autoCheckUpdates": true,
@@ -218,8 +254,6 @@
 	"clock.dateFormat": "HH:MM dd/mm",
 	"color-highlight.markerType": "underline",
 	"color-highlight.markRuler": false,
-	"errorLens.messageTemplate": "$message [$source:$code]",
-	"errorLens.messageBackgroundMode": "none",
 	"github.copilot.chat.agent.thinkingTool": true,
 	"github.copilot.chat.codesearch.enabled": true,
 	"github.copilot.advanced": {
@@ -238,6 +272,8 @@
 	"database-client.queryWithSchema": true,
 	"database-client.enableEditorCodeLens": false,
 	"database-client.autoSync": true,
+	"errorLens.messageBackgroundMode": "none",
+	"errorLens.messageTemplate": "$message [$source:$code]",
 	"indentRainbow.indicatorStyle": "light",
 	"indentRainbow.colorOnWhiteSpaceOnly": true,
 	"indentRainbow.lightIndicatorStyleLineWidth": 1,
@@ -247,8 +283,8 @@
 		"rgba(255,127,255,0.07)",
 		"rgba(79,236,236,0.07)"
 	],
-	"vscode-neovim.ctrlKeysForInsertMode": [ ],
-	"vscode-neovim.ctrlKeysForNormalMode": [ ],
+	"vscode-neovim.ctrlKeysForInsertMode": [],
+	"vscode-neovim.ctrlKeysForNormalMode": [],
 	"vscode-neovim.neovimExecutablePaths.linux": "/usr/bin/nvim",
 	"outline.showArrays": false,
 	"outline.showBooleans": false,
@@ -961,7 +997,7 @@
 	"cursor.chat.contextLength": 8000,
 	"cursor.cpp.enablePartialAccepts": true,
 	"cursor.cpp.partialAcceptThreshold": 0.5,
-	"cursor.cpp.disabledLanguages": [ ],
+	"cursor.cpp.disabledLanguages": [],
 	"cursor.cpp.maxPrefixLengthForSingleLine": 100,
 	"cursor.cpp.maxSuffixLengthForSingleLine": 100,
 	"cursor.cpp.enablePartialAcceptsInSnippetMode": true,
@@ -1012,8 +1048,5 @@
 	"gitlens.codeLens.enabled": false,
 	"gitlens.hovers.enabled": false,
 	"diffEditor.renderSideBySide": true,
-	"merge-conflict.autoNavigateNextConflict.enabled": true,
-	"[php]": {
-		"editor.defaultFormatter": "bmewburn.vscode-intelephense-client"
-	}
+	"merge-conflict.autoNavigateNextConflict.enabled": true
 }
