--- a/Code/User/settings.json
+++ b/Code/User/settings.json
@@ -1049,5 +1049,6 @@
 	"gitlens.codeLens.enabled": false,
 	"gitlens.hovers.enabled": false,
 	"diffEditor.renderSideBySide": true,
-	"merge-conflict.autoNavigateNextConflict.enabled": true
+	"merge-conflict.autoNavigateNextConflict.enabled": true,
+	"workbench.statusBar.visible": false
 }
