feat(surfingkeys): exit insert mode

--- a/surfing-keys/biome.json
+++ b/surfing-keys/biome.json
@@ -27,7 +27,7 @@
 	},
 	"javascript": {
 		"formatter": {
-			"enabled": false,
+			"enabled": true,
 			"semicolons": "asNeeded",
 			"indentStyle": "space",
 			"quoteStyle": "single",
