--- a/Code/User/settings.json
+++ b/Code/User/settings.json
@@ -61,8 +61,11 @@
 	"explorer.decorations.colors": true,
 	"explorer.confirmDelete": false,
 	"explorer.confirmDragAndDrop": false,
+	"explorer.compactFolders": false,
 	"files.enableTrash": false,
 	"files.confirmDelete": false,
+	"files.trimTrailingWhitespace": true,
+	"files.insertFinalNewline": true,
 	"extensions.experimental.deferredStartupFinishedActivation": true,
 	"extensions.experimental.affinity": {
 		"asvetliakov.vscode-neovim": 1,
@@ -188,6 +191,8 @@
 	"terminal.integrated.gpuAcceleration": "on",
 	"terminal.integrated.defaultLocation": "editor",
 	"terminal.integrated.tabs.title": "${workspaceFolderName}",
+	"material-icon-theme.hidesExplorerArrows": true,
+	"workbench.iconTheme": "material-icon-theme",
 	"workbench.colorCustomizations": {
 		"[Default Dark Modern]": {
 			"editor.background": "#0c0c0c",
@@ -231,10 +236,12 @@
 	"workbench.editor.decorations.colors": false,
 	"workbench.editor.decorations.badges": false,
 	"workbench.welcomePage.walkthroughs.openOnInstall": false,
-	"workbench.tree.indent": 15,
 	"workbench.editor.closeOnFileDelete": true,
 	"workbench.editor.limit.enabled": true,
 	"workbench.activityBar.orientation": "vertical",
+	"workbench.tree.enableStickyScroll": false,
+	"workbench.tree.renderIndentGuides": "always",
+	"workbench.tree.indent": 18,
 	"workbench.editor.limit.value": 10,
 	"animations.Install-Method": "Custom CSS and JS",
 	"animations.Enabled": true,
@@ -1050,5 +1057,5 @@
 	"gitlens.hovers.enabled": false,
 	"diffEditor.renderSideBySide": true,
 	"merge-conflict.autoNavigateNextConflict.enabled": true,
-	"chat.editing.confirmEditRequestRetry": false
+	"material-icon-theme.activeIconPack": "nest"
 }
