--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,5 @@
 {
-  "$schema": "https://biomejs.dev/schemas/2.2.5/schema.json",
+  "$schema": "https://biomejs.dev/schemas/2.2.6/schema.json",
   "linter": {
     "enabled": true,
     "rules": {
@@ -15,6 +15,7 @@
         "noExplicitAny": "off"
       },
       "complexity": {
+        "useArrowFunction": "off",
         "noForEach": "off",
         "useLiteralKeys": "off"
       },
@@ -31,6 +32,7 @@
       "indentStyle": "space",
       "quoteStyle": "single",
       "trailingCommas": "all",
+      "lineWidth": 100,
       "indentWidth": 2
     },
     "parser": {
