--- a/biome.json
+++ b/biome.json
@@ -32,6 +32,8 @@
       "indentStyle": "space",
       "quoteStyle": "single",
       "trailingCommas": "all",
+      "lineEnding": "lf",
+      "arrowParentheses": "asNeeded",
       "lineWidth": 100,
       "indentWidth": 2
     },
