feat: automate commit

--- a/hypr/bindings.conf
+++ b/hypr/bindings.conf
@@ -32,12 +32,16 @@ bindd = ALT, F,               Full width,      fullscreen, 1
 bindd = SUPER , F,            Full screen,     fullscreen, 0
 bindd = ALT, T,               Toggle floating, togglefloating,
 
-bind = ALT, Q,                killactive
+bind = ALT, Q,                forcekillactive
+bind = ALT, O,                cyclenext
 bind = ALT, N,                movefocus, d
 bind = ALT, E,                movefocus, u
 bind = ALT, H,                movefocus, l
 bind = ALT, I,                movefocus, r
-bind = ALT, O,                cyclenext
+bind = ALT SHIFT, N,          swapwindow, d
+bind = ALT SHIFT, E,          swapwindow, u
+bind = ALT SHIFT, H,          swapwindow, l
+bind = ALT SHIFT, I,          swapwindow, r
 
 # Workspace controls
 bind = SUPER, N,              workspace, 1
