feat: automate commit

--- a/hypr/bindings.conf
+++ b/hypr/bindings.conf
@@ -32,7 +32,7 @@ bindd = ALT, F,               Full width,      fullscreen, 1
 bindd = SUPER , F,            Full screen,     fullscreen, 0
 bindd = ALT, T,               Toggle floating, togglefloating,
 
-bind = ALT, Q,                forcekillactive
+bind = ALT, Q,                killactive
 bind = ALT, O,                cyclenext
 bind = ALT, N,                movefocus, d
 bind = ALT, E,                movefocus, u
