feat: automate commit

--- a/hypr/bindings.conf
+++ b/hypr/bindings.conf
@@ -13,6 +13,7 @@ unbind = CONTROL SUPER, E
 unbind = CONTROL SUPER, I
 unbind = CONTROL SUPER, I
 unbind = SUPER, T
+# unbind = SUPER, SPACE
 
 # App bindings
 bindd = ALT, RETURN,          Terminal,        exec, $term
@@ -20,12 +21,6 @@ bindd = ALT, B,               Browser,         exec, $browser
 bindd = ALT, A,               Editor,          exec, $editor
 bindd = SUPER, T,             Activity,        exec, $term -e btop
 bindd = SUPER, D,             Docker,          exec, $term -e lazydocker
-bindd = SUPER, P,             Passwords,       exec, $app -- 1password
-
-# URL bindings
-# bindd = SUPER, C,             Calendar,        exec, $browser "https://app.hey.com/calendar/weeks/"
-# bindd = SUPER, Z,             Zoom,            exec, $browser "https://app.hey.com/calendar/weeks/"
-# bindd = SUPER, G,             Meet,            exec, $browser "https://app.hey.com/calendar/weeks/"
 
 # Window controls
 bindd = ALT, F,               Full width,      fullscreen, 1
@@ -60,6 +55,7 @@ bind = CONTROL SUPER, H,      movetoworkspace, 4
 bindd = ALT, P,               Screenshot edit, exec, omarchy-cmd-screenshot
 bindd = SUPER, P,             Screenshot,      exec, omarchy-cmd-screenshot smart clipboard
 bindd = SUPER, S,             Screen record,   exec, omarchy-menu screenrecord
+# bindd = SUPER, SPACE,         Input method,    exec, ~/.config/dotfiles/qtile/.init-scripts/ibus-switch-input
 
 # media
 bindeld = SUPER, x,           Volume up,       exec, $osdclient --output-volume raise
