--- a/hypr/envs.conf
+++ b/hypr/envs.conf
@@ -1,4 +1,5 @@
 # Extra env variables
-env = TERMINAL,   wezterm
-env = BROWSER,    brave
-env = EDITOR,     neovide
+env = TERMINAL,       wezterm
+env = BROWSER,        brave
+env = EDITOR,         neovide
+env = XCURSOR_SIZE,   15
