--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -8,7 +8,7 @@ background {
 }
 
 animations {
-    enabled = false
+    enabled = true
 }
 
 input-field {
@@ -29,7 +29,7 @@ input-field {
     check_color = $check_color
     fail_text = <i>$FAIL ($ATTEMPTS)</i>
 
-    rounding = 0
+    rounding = 4
     shadow_passes = 0
     fade_on_empty = false
 }
