feat: automate commit

--- a/hypr/bindings.conf
+++ b/hypr/bindings.conf
@@ -13,7 +13,7 @@ unbind = CONTROL SUPER, E
 unbind = CONTROL SUPER, I
 unbind = CONTROL SUPER, I
 unbind = SUPER, T
-# unbind = SUPER, SPACE
+unbind = SUPER, SPACE
 
 # App bindings
 bindd = ALT, RETURN,          Terminal,        exec, $term
@@ -55,7 +55,9 @@ bind = CONTROL SUPER, H,      movetoworkspace, 4
 bindd = ALT, P,               Screenshot edit, exec, omarchy-cmd-screenshot
 bindd = SUPER, P,             Screenshot,      exec, omarchy-cmd-screenshot smart clipboard
 bindd = SUPER, S,             Screen record,   exec, omarchy-menu screenrecord
-# bindd = SUPER, SPACE,         Input method,    exec, ~/.config/dotfiles/qtile/.init-scripts/ibus-switch-input
+bindd = ALT, ESCAPE,          Application,     exec, omarchy-launch-walker
+bindd = SUPER, L,             Lockscreen,      exec, omarchy-lock-screen
+bindd = ALT, L,               Screensaver,     exec, omarchy-launch-screensaver
 
 # media
 bindeld = SUPER, x,           Volume up,       exec, $osdclient --output-volume raise
