feat: automate commit

--- a/omarchy/hypr/bindings.conf
+++ b/omarchy/hypr/bindings.conf
@@ -54,7 +54,7 @@ bind = CONTROL SUPER, H,      movetoworkspace, 4
 # Misc
 bindd = ALT, P,               Screenshot edit, exec, omarchy-cmd-screenshot
 bindd = SUPER, P,             Screenshot,      exec, omarchy-cmd-screenshot smart clipboard
-bindd = SUPER, S,             Screen record,   exec, omarchy-menu screenrecord
+bindd = SUPER, S,             Screenrecord,    exec, omarchy-cmd-screenrecord
 bindd = ALT, ESCAPE,          Application,     exec, omarchy-launch-walker
 bindd = SUPER, L,             Lockscreen,      exec, omarchy-lock-screen
 bindd = ALT, L,               Screensaver,     exec, omarchy-launch-screensaver
