chore: update configs

--- a/omarchy/hypr/looknfeel.conf
+++ b/omarchy/hypr/looknfeel.conf
@@ -15,6 +15,14 @@ decoration {
     rounding = 4
 }
 
+# https://wiki.hyprland.org/Configuring/Master-Layout/
+master {
+    # Max-like layout similar to qtile
+    orientation = center
+    new_on_top = true
+    inherit_fullscreen = false
+}
+
 # https://wiki.hypr.land/Configuring/Dwindle-Layout/
 dwindle {
     # Avoid overly wide single-window layouts on wide screens
