--- a/omarchy/hypr/hyprland.conf
+++ b/omarchy/hypr/hyprland.conf
@@ -23,7 +23,7 @@ source = ~/.config/hypr/autostart.conf
 # Add any other personal Hyprland configuration below
 # windowrule = workspace 5, class:qemu
 
-# NVIDIA environment variables
+# NVIDIA environment variables (requires nvidia-lts driver installed)
 env = NVD_BACKEND,direct
 env = LIBVA_DRIVER_NAME,nvidia
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
