feat: automate commit

--- a/omarchy/hypr/bindings.conf
+++ b/omarchy/hypr/bindings.conf
@@ -1,5 +1,5 @@
 $browser  = omarchy-launch-webapp
-$term     = omarchy-launch-terminal
+$term     = wezterm
 $editor   = omarchy-launch-editor
 $app      = uwsm-app
 
