--- a/omarchy/hypr/hyprlock.conf
+++ b/omarchy/hypr/hyprlock.conf
@@ -4,7 +4,7 @@ background {
     monitor =
     color = $color
     path = ~/.config/omarchy/current/background
-    blur_passes = 3
+    blur_passes = 0
 }
 
 animations {
@@ -13,7 +13,7 @@ animations {
 
 input-field {
     monitor =
-    size = 650, 100
+    size = 350, 50
     position = 0, 0
     halign = center
     valign = center
@@ -22,7 +22,7 @@ input-field {
     outer_color = $outer_color
     outline_thickness = 4
 
-    font_family = CaskaydiaMono Nerd Font Propo
+    font_family = FiraCode Nerd Font
     font_color = $font_color
 
     placeholder_text = Enter Password 󰈷
