--- a/omarchy/hypr/looknfeel.conf
+++ b/omarchy/hypr/looknfeel.conf
@@ -3,7 +3,8 @@
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
     # No gaps between windows
-    gaps_in = -1
+    border_size = 0
+    gaps_in = 0
     gaps_out = 0
 
     # Use master layout instead of dwindle
@@ -13,6 +14,11 @@ general {
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
     rounding = 4
+    active_opacity = 0.95
+    inactive_opacity = 1.1
+    fullscreen_opacity = 1.0
+    dim_inactive = true
+    dim_strength = 0.35
 }
 
 # https://wiki.hyprland.org/Configuring/Master-Layout/
