feat(hyprland): converted to js script

--- a/omarchy/hypr/bindings.conf
+++ b/omarchy/hypr/bindings.conf
@@ -2,6 +2,7 @@ $browser  = omarchy-launch-webapp
 $term     = wezterm
 $editor   = omarchy-launch-editor
 $app      = uwsm-app
+$script   = ~/.config/dotfiles/omarchy/scripts
 
 # unbind
 unbind = SUPER, W
@@ -56,7 +57,7 @@ bindd = SUPER, P,             Screenshot,      exec, omarchy-cmd-screenshot smar
 bindd = SUPER, S,             Screenrecord,    exec, omarchy-cmd-screenrecord
 bindd = ALT, ESCAPE,          Application,     exec, omarchy-launch-walker
 bindd = SUPER, L,             Lockscreen,      exec, omarchy-lock-screen
-bindd = ALT, L,               Screensaver,     exec, omarchy-launch-screensaver
+bindd = SUPER, SPACE,         Change method,   exec, $script/fcit5-custom
 
 # media
 bindeld = SUPER, x,           Volume up,       exec, $osdclient --output-volume raise
