--- a/omarchy/hypr/looknfeel.conf
+++ b/omarchy/hypr/looknfeel.conf
@@ -17,7 +17,7 @@ decoration {
     active_opacity = 0.95
     inactive_opacity = 1.1
     fullscreen_opacity = 1.0
-    dim_inactive = true
+    dim_inactive = false
     dim_strength = 0.3
 }
 
