feat(hyprland): add suspend keymap

--- a/omarchy/hypr/bindings.conf
+++ b/omarchy/hypr/bindings.conf
@@ -56,7 +56,8 @@ bindd = ALT, P,               Screenshot edit, exec, omarchy-cmd-screenshot
 bindd = SUPER, P,             Screenshot,      exec, omarchy-cmd-screenshot smart clipboard
 bindd = SUPER, S,             Screenrecord,    exec, omarchy-cmd-screenrecord
 bindd = ALT, ESCAPE,          Application,     exec, omarchy-launch-walker
-bindd = SUPER, L,             Lockscreen,      exec, omarchy-lock-screen
+bindd = ALT, L,               Lockscreen,      exec, omarchy-lock-screen
+bindd = SUPER, L,             Suspend,         exec, systemctl suspend
 bindd = SUPER, SPACE,         Change method,   exec, $script/fcit5-custom
 
 # media
