feat: automate commit

--- a/omarchy/hypr/bindings.conf
+++ b/omarchy/hypr/bindings.conf
@@ -29,6 +29,7 @@ bindd = ALT, T,               Toggle floating, togglefloating,
 
 bind = ALT, Q,                killactive
 bind = ALT, O,                cyclenext
+bind = ALT, Tab,              cyclenext
 bind = ALT, N,                movefocus, d
 bind = ALT, E,                movefocus, u
 bind = ALT, H,                movefocus, l
