--- a/omarchy/hypr/bindings.conf
+++ b/omarchy/hypr/bindings.conf
@@ -61,7 +61,7 @@ bindd = ALT, L,               Lockscreen,      exec, omarchy-lock-screen
 bindd = SUPER, L,             Suspend,         exec, systemctl suspend
 bindd = SUPER, SPACE,         Change method,   exec, $script/fcit5-custom
 
-# media
+# Media
 bindeld = SUPER, x,           Volume up,       exec, $osdclient --output-volume raise
 bindeld = SUPER, z,           Volume down,     exec, $osdclient --output-volume lower
 bindeld = SUPER, c,           Mute,            exec, $osdclient --output-volume mute-toggle
