--- a/omarchy/walker/config.toml
+++ b/omarchy/walker/config.toml
@@ -48,3 +48,7 @@ provider = "websearch"
 [[providers.prefixes]]
 prefix = "$"
 provider = "clipboard"
+
+[[emergencies]]
+text = "Restart Walker"
+command = "omarchy-restart-walker"
