feat(fzf): update fdignore

--- a/.fdignore
+++ b/.fdignore
@@ -12,3 +12,29 @@ node_modules
 dist
 .git
 telemetry
+.dotnet
+.bun
+.vscode-oss
+.gnupg
+.pki
+.swt
+.m2
+.yarn
+.cursor
+Hubstaff
+.npm
+.cargo
+.sdkman
+.tableplus
+.claude
+intelephense
+.cache
+.oh-my-zsh
+.vscode
+.dbclient
+.docker
+.fltk
+.nv
+.rest-client
+.nvim
+.pyenv
