feat(omarchy): update configs

--- a/omarchy/hypr/looknfeel.conf
+++ b/omarchy/hypr/looknfeel.conf
@@ -26,7 +26,8 @@ master {
     # Max-like layout similar to qtile
     orientation = center
     new_on_top = true
-    inherit_fullscreen = false
+    new_status = master
+    mfact = 0.6
 }
 
 # https://wiki.hypr.land/Configuring/Dwindle-Layout/
