--- a/omarchy/waybar/config.jsonc
+++ b/omarchy/waybar/config.jsonc
@@ -1,106 +1,11 @@
-{
-	// config
-	"reload_style_on_change": true,
-	"layer": "top",
-	"position": "top",
-	"spacing": 0,
-	"height": 20,
-	// layout
-	"modules-left": ["wlr/taskbar"],
-	"modules-center": ["clock"],
-	"modules-right": [
-		"custom/events",
-		"bluetooth",
-		"network",
-		"pulseaudio",
-		"battery"
-	],
-	// components
-	"wlr/taskbar": {
-		"tooltip": false,
-		"format": "{title}",
-		"sort-by-app-id": true,
-		"app_ids-mapping": {
-			"brave-browser": "Brave",
-			"cursor": "Code"
-		},
-		"rewrite": {
-			".*Brave": " Brave",
-			"Zoom": " Zoom",
-			"Code": " Code",
-			"Hubstaff": "󱄅 Hubstaff",
-			"Github": " Github",
-			"ChatGPT": " ChatGPT"
-		}
+[
+	{
+		"include": ["~/.config/dotfiles/omarchy/waybar/HDMI-A-1.jsonc"]
 	},
-	"clock": {
-		"format": "{:L%a %H:%M %d/%m} ",
-		"tooltip-format": "<tt><small>{calendar}</small></tt>",
-		"calendar": {
-			"mode": "month",
-			"mode-mon-col": 3,
-			"weeks-pos": "right",
-			"on-scroll": 1,
-			"format": {
-				"months": "<span color='#ffead3'><b>{}</b></span>",
-				"days": "<span color='#ecc6d9'><b>{}</b></span>",
-				"weeks": "<span color='#99ffdd'><b>W{}</b></span>",
-				"weekdays": "<span color='#ffcc66'><b>{}</b></span>",
-				"today": "<span color='#ff6699'><b><u>{}</u></b></span>"
-			}
-		}
+	{
+		"include": ["~/.config/dotfiles/omarchy/waybar/eDP-1.jsonc"]
 	},
-	"custom/events": {
-		"format": "{text}",
-		"tooltip": true,
-		"interval": 300,
-		"format-icons": {
-			"default": ""
-		},
-		"exec": "~/.config/dotfiles/omarchy/scripts/khal-custom",
-		"return-type": "json"
-	},
-	"network": {
-		"format-icons": ["󰤯", "󰤟", "󰤢", "󰤥", "󰤨"],
-		"format": "{icon}",
-		"format-wifi": "{icon}",
-		"format-ethernet": "󰀂",
-		"format-disconnected": "󰤮",
-		"tooltip-format-wifi": "{essid} ({frequency} GHz)\n⇣{bandwidthDownBytes}  ⇡{bandwidthUpBytes}",
-		"tooltip-format-ethernet": "⇣{bandwidthDownBytes}  ⇡{bandwidthUpBytes}",
-		"tooltip-format-disconnected": "Disconnected",
-		"interval": 3,
-		"spacing": 1
-	},
-	"battery": {
-		"format": "{capacity}% {icon}",
-		"format-discharging": "{icon}",
-		"format-charging": "{icon}",
-		"format-plugged": "",
-		"format-icons": {
-			"charging": ["󰢜", "󰂆", "󰂇", "󰂈", "󰢝", "󰂉", "󰢞", "󰂊", "󰂋", "󰂅"],
-			"default": ["󰁺", "󰁻", "󰁼", "󰁽", "󰁾", "󰁿", "󰂀", "󰂁", "󰂂", "󰁹"]
-		},
-		"format-full": "󰂅",
-		"interval": 5,
-		"states": {
-			"warning": 20,
-			"critical": 10
-		}
-	},
-	"bluetooth": {
-		"format": "",
-		"format-disabled": "󰂲",
-		"format-off": "󰂲",
-		"format-connected": "{device_battery_percentage}"
-	},
-	"pulseaudio": {
-		"format": "{icon}",
-		"scroll-step": 5,
-		"format-muted": "",
-		"format-icons": {
-			"headphone": "",
-			"default": ["", "", ""]
-		}
+	{
+		"include": ["~/.config/dotfiles/omarchy/waybar/DP-3.jsonc"]
 	}
-}
+]
