--- a/omarchy/waybar/base-bar.jsonc
+++ b/omarchy/waybar/base-bar.jsonc
@@ -1,46 +1,48 @@
 {
-	"reload_style_on_change": true,
-	"layer": "top",
-	"position": "top",
-	"spacing": 0,
-	"height": 20,
-	"modules-left": ["wlr/taskbar"],
-	"custom/earth": {
-		"format": " "
-	},
-	"clock": {
-		"format": "{:L%H:%M %d/%m %a [VNT]} ",
-		"timezone": "Asia/Ho_Chi_Minh",
-		"tooltip-format": "<tt><small>{calendar}</small></tt>",
-		"calendar": {
-			"mode": "year",
-			"mode-mon-col": 3,
-			"weeks-pos": "left",
-			"on-scroll": 1,
-			"format": {
-				"months": "<span color='#ffead3'><b>{}</b></span>",
-				"days": "<span color='#ecc6d9'><b>{}</b></span>",
-				"weeks": "<span color='#99ffdd'><b>{}</b></span>",
-				"weekdays": "<span color='#ffcc66'><b>{}</b></span>",
-				"today": "<span color='#ff6699'><b><u>{}</u></b></span>"
-			}
-		}
-	},
-	"wlr/taskbar": {
-		"tooltip": false,
-		"format": "{title}",
-		"sort-by-app-id": true,
-		"app_ids-mapping": {
-			"brave-browser": "Brave",
-			"cursor": "Code"
-		},
-		"rewrite": {
-			".*Brave": " Brave",
-			"Zoom": " Zoom",
-			"Code": " Code",
-			"Hubstaff": "󱄅 Hubstaff",
-			"Github": " Github",
-			"ChatGPT": " ChatGPT"
-		}
-	}
+  "reload_style_on_change": true,
+  "layer": "top",
+  "position": "top",
+  "spacing": 0,
+  "height": 20,
+  "modules-left": [
+    "wlr/taskbar"
+  ],
+  "custom/earth": {
+    "format": " "
+  },
+  "clock": {
+    "format": "{:L%H:%M %d/%m %a [VNT]} ",
+    "timezone": "Asia/Ho_Chi_Minh",
+    "tooltip-format": "<tt><small>{calendar}</small></tt>",
+    "calendar": {
+      "mode": "year",
+      "mode-mon-col": 3,
+      "weeks-pos": "left",
+      "on-scroll": 1,
+      "format": {
+        "months": "<span color='#ffead3'><b>{}</b></span>",
+        "days": "<span color='#ecc6d9'><b>{}</b></span>",
+        "weeks": "<span color='#99ffdd'><b>{}</b></span>",
+        "weekdays": "<span color='#ffcc66'><b>{}</b></span>",
+        "today": "<span color='#ff6699'><b><u>{}</u></b></span>"
+      }
+    }
+  },
+  "wlr/taskbar": {
+    "tooltip": false,
+    "format": "{title}",
+    "sort-by-app-id": true,
+    "app_ids-mapping": {
+      "brave-browser": "Brave",
+      "cursor": "Code"
+    },
+    "rewrite": {
+      ".*Brave": " Brave",
+      "Zoom": " Zoom",
+      "Code": " Code",
+      "Hubstaff": "󱄅 BTop",
+      "Github": " Github",
+      "ChatGPT": " ChatGPT"
+    }
+  }
 }
