--- a/omarchy/waybar/HDMI-A-1.jsonc
+++ b/omarchy/waybar/HDMI-A-1.jsonc
@@ -2,15 +2,15 @@
 	"layer": "top",
 	"position": "top",
 	"output": ["HDMI-A-1"],
-	"modules-center": ["clock#us", "custom/earth", "clock#ptg"],
-	"modules-right": ["clock"],
+	"modules-center": [],
+	"modules-right": ["clock#us", "custom/earth", "clock#ptg", "clock"],
 	"include": ["~/.config/dotfiles/omarchy/waybar/base-bar.jsonc"],
 	"clock#us": {
-		"format": "{:L%H:%M %d/%m %a [NY]}  ",
+		"format": "{:L%H:%M [%d %a NY]}  ",
 		"timezone": "America/New_York"
 	},
 	"clock#ptg": {
-		"format": " {:L%H:%M %d/%m %a [PTG]}",
+		"format": " {:L%H:%M [%d %a PTG]}",
 		"timezone": "Portugal"
 	}
 }
