feat(lazyvim): integrate supermaven

--- a/omarchy/waybar/base-bar.jsonc
+++ b/omarchy/waybar/base-bar.jsonc
@@ -36,11 +36,13 @@
 		},
 		"rewrite": {
 			".*Brave": " Brave",
-			"Zoom": " Zoom",
+			".*Zoom": " Zoom",
 			"Code": " Code",
+			"Cursor": " Code",
 			"Hubstaff": "󱄅 Hubstaff",
 			"Github": " Github",
-			"ChatGPT": " ChatGPT"
+			"ChatGPT": " ChatGPT",
+			"MongoDB Compass.*": " Compass"
 		}
 	}
 }
