feat(lazyvim): integrate tsgo

--- a/omarchy/waybar/HDMI-A-1.jsonc
+++ b/omarchy/waybar/HDMI-A-1.jsonc
@@ -1,16 +1,25 @@
 {
-	"layer": "top",
-	"position": "top",
-	"output": ["HDMI-A-1"],
-	"modules-center": [],
-	"modules-right": ["clock#us", "custom/earth", "clock#ptg", "clock"],
-	"include": ["~/.config/dotfiles/omarchy/waybar/base-bar.jsonc"],
-	"clock#us": {
-		"format": "{:L%H:%M [%d %a NY]}  ",
-		"timezone": "America/New_York"
-	},
-	"clock#ptg": {
-		"format": " {:L%H:%M [%d %a PTG]}",
-		"timezone": "Portugal"
-	}
+  "layer": "top",
+  "position": "top",
+  "output": [
+    "HDMI-A-1"
+  ],
+  "modules-center": [],
+  "modules-right": [
+    "clock#us",
+    "custom/earth",
+    "clock#ptg",
+    "clock"
+  ],
+  "include": [
+    "~/.config/dotfiles/omarchy/waybar/base-bar.jsonc"
+  ],
+  "clock#us": {
+    "format": "{:L%H:%M [%d %a NY]}  ",
+    "timezone": "America/New_York"
+  },
+  "clock#ptg": {
+    "format": " {:L%H:%M [%d %a PT]}",
+    "timezone": "Portugal"
+  }
 }
