--- a/omarchy/hypr/monitors.conf
+++ b/omarchy/hypr/monitors.conf
@@ -1,4 +1,4 @@
 env = GDK_SCALE,1
-monitor = HDMI-A-1, 1920x1080, 0x0, 1, transform, 3
-monitor = DP-3, 1920x1080, 1080x0, 1
+monitor = HDMI-A-1, 1920x1080, 0x0, 1, transform, 1
+monitor = DP-3, 1920x1080, 1080x0, 1, transform, 2
 monitor = eDP-1, 1920x1080, 1080x1080, 1.20
