feat: automate commit

--- a/omarchy/hypr/bindings.conf
+++ b/omarchy/hypr/bindings.conf
@@ -55,7 +55,7 @@ bind = CONTROL SUPER, H,      movetoworkspace, 5
 # Misc
 bindd = ALT, P,               Screenshot edit, exec, omarchy-cmd-screenshot
 bindd = SUPER, P,             Screenshot,      exec, omarchy-cmd-screenshot smart clipboard
-bindd = SUPER, S,             Screenrecord,    exec, omarchy-cmd-screenrecord
+bindd = SUPER, S,             Screenrecord,    exec, omarchy-cmd-screenrecord --with-microphone-audio
 bindd = ALT, ESCAPE,          Application,     exec, omarchy-launch-walker
 bindd = ALT, L,               Lockscreen,      exec, omarchy-lock-screen
 bindd = SUPER, L,             Suspend,         exec, systemctl suspend
