--- a/omarchy/hypr/bindings.conf
+++ b/omarchy/hypr/bindings.conf
@@ -1,4 +1,5 @@
 $browser  = omarchy-launch-webapp
+bindd = SUPER ALT, RETURN, Tmux, exec, uwsm-app -- xdg-terminal-exec --dir="$(omarchy-cmd-terminal-cwd)" tmux new
 $term     = wezterm
 $editor   = omarchy-launch-editor
 $app      = uwsm-app
