feat: minor changes

--- a/omarchy/hypr/hyprland.conf
+++ b/omarchy/hypr/hyprland.conf
@@ -22,6 +22,8 @@ source = ~/.config/hypr/autostart.conf
 
 # Add any other personal Hyprland configuration below
 # windowrule = workspace 5, class:qemu
+windowrule = match:class org.pulseaudio.pavucontrol, float on, size monitor_w*0.75 monitor_h*0.8
+windowrule = match:class Netsoft-com.netsoft.hubstaff, size 340 160, move monitor_w-340 monitor_h-160
 
 # NVIDIA environment variables (requires nvidia-lts driver installed)
 env = NVD_BACKEND,direct
